chisty_cod! chisty_cod! podgotovka coda k zaschite

--- a/app/src/main/res/layout/activity_subhan.xml
+++ b/app/src/main/res/layout/activity_subhan.xml
@@ -9,6 +9,8 @@
     android:background="@drawable/backgroundsalavatcounter"
     tools:context=".SubhanActivity">
 
+
+
     <TextView
         android:id="@+id/subhanCount1"
         android:layout_width="match_parent"
@@ -96,6 +98,15 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.788" />
+
+    <View
+        android:id="@+id/subhanView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="@+id/subhanCount1"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
