--- a/app/src/main/res/layout/fragment_counter.xml
+++ b/app/src/main/res/layout/fragment_counter.xml
@@ -57,6 +57,7 @@
         android:layout_height="48dp"
         android:background="@drawable/ic_baseline_control_point_24"
         app:cornerRadius="28dp"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.346"
@@ -70,6 +71,7 @@
         android:layout_height="48dp"
         android:background="@drawable/ic_baseline_check_24"
         app:cornerRadius="28dp"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.656"
